--- a/Source/Blazorise.Material/wwwroot/blazorise.material.css
+++ b/Source/Blazorise.Material/wwwroot/blazorise.material.css
@@ -2595,6 +2595,14 @@ body {
   }
 }
 @media (max-width: 991.98px) {
+  .mui-bar-horizontal .mui-bar-dropdown-toggle::after {
+    content: "expand_more";
+    font-family: var(--mui-font-icon);
+    font-size: 1.125rem;
+    line-height: 1;
+    margin-inline-start: auto;
+    opacity: 0.9;
+  }
   .mui-bar-horizontal .mui-bar-dropdown-menu > .mui-bar-dropdown > .mui-bar-dropdown-menu-container {
     position: relative;
     inset: auto;
@@ -2611,6 +2619,10 @@ body {
   .mui-bar-horizontal .mui-bar-dropdown-submenu > .mui-bar-dropdown-toggle::after {
     content: "expand_more";
     margin-inline-start: auto;
+    font-family: var(--mui-font-icon);
+    font-size: 1.125rem;
+    line-height: 1;
+    opacity: 0.9;
   }
 }
 .mui-breadcrumb {
